get user by id working
